spacing fixes

--- a/index.css
+++ b/index.css
@@ -29,10 +29,10 @@ header {
 }
 
 main {
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 
   section {
-    margin: 4rem 0;
+    margin: 1.5rem 0;
 
     &:first-child {
       margin-top: 0;
